--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zonemaster-gui",
-    "version": "5.0.0-alpha.3",
+    "version": "5.0.0-alpha.1",
     "license": "BSD-2-Clause",
     "scripts": {
         "start": "npm run dev",
@@ -12,6 +12,8 @@
         "lib:build": "cd src/lib && vite build -c ./vite.config.js --outDir ../../dist --emptyOutDir",
         "lib:demo": "vite serve demo -c src/lib/vite.config.js",
         "postinstall": "paraglide-js compile --project ./project.inlang --outdir ./src/paraglide",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
         "e2e": "playwright --version && playwright test",
         "e2e:update": "playwright --version && playwright test --update-snapshots",
         "e2e:install": "playwright install chromium",
@@ -20,27 +22,37 @@
     "private": false,
     "type": "module",
     "dependencies": {
-        "@astrojs/node": "^9.4.3",
-        "@astrojs/svelte": "^7.1.1",
-        "@inlang/paraglide-astro": "^0.4.1",
-        "astro": "^5.13.7",
+        "@astrojs/node": "^9.1.3",
+        "@astrojs/svelte": "^7.0.9",
+        "@inlang/paraglide-astro": "^0.3.5",
+        "astro": "^5.6.1",
         "punycode": "^2.3.1",
         "remark-definition-list": "^2.0.0",
         "remark-gfm": "^4.0.1",
-        "svelte": "^5.38.9"
+        "svelte": "^5.19.9"
     },
     "devDependencies": {
+        "@chromatic-com/storybook": "^3.2.5",
         "@inlang/paraglide-js": "1.11.8",
-        "@playwright/test": "^1.55.0",
-        "@sveltejs/vite-plugin-svelte": "^6.2.0",
-        "@tsconfig/svelte": "^5.0.5",
-        "@types/node": "^24.3.1",
+        "@playwright/test": "^1.50.1",
+        "@storybook/addon-essentials": "^8.6.4",
+        "@storybook/addon-interactions": "^8.6.4",
+        "@storybook/addon-svelte-csf": "^5.0.0-next.23",
+        "@storybook/blocks": "^8.6.4",
+        "@storybook/svelte": "^8.6.4",
+        "@storybook/svelte-vite": "^8.6.4",
+        "@storybook/test": "^8.6.4",
+        "@sveltejs/vite-plugin-svelte": "^5.0.3",
+        "@tsconfig/svelte": "^5.0.4",
+        "@types/node": "^22.13.1",
         "archiver": "^7.0.1",
-        "prettier": "3.6.2",
+        "prettier": "3.5.0",
         "prettier-plugin-astro": "0.14.1",
-        "prettier-plugin-svelte": "^3.4.0",
-        "svelte-check": "^4.3.1",
-        "typescript": "^5.9.2",
-        "vite": "^7.1.5"
+        "prettier-plugin-svelte": "^3.3.3",
+        "storybook": "^8.6.4",
+        "storybook-dark-mode": "^4.0.2",
+        "svelte-check": "^4.1.4",
+        "typescript": "^5.7.3",
+        "vite": "^6.1.0"
     }
 }
