--- a/assets/app.config.json
+++ b/assets/app.config.json
@@ -5,5 +5,6 @@
     "enabledLanguages": [ "sv", "en" ],
     "logoUrl": "assets/images/internetstiftelsen-logo.svg",
     "msgBanner": "",
-    "pollingInterval": 5000
+    "pollingInterval": 5000,
+    "footerLogo": "assets/images/internetstiftelsen-afnic-logo.svg"
 }
