--- a/assets/app.config.json
+++ b/assets/app.config.json
@@ -6,5 +6,6 @@
     "logoUrl": "assets/images/internetstiftelsen-logo.svg",
     "msgBanner": "",
     "pollingInterval": 5000,
-    "footerLogo": "assets/images/afnic-logo.svg"
+    "footerLogo": "assets/images/afnic-logo.svg",
+    "footerLogoAlt": "Afnic logotype"
 }
