added all laguanges and upgraded application version, added custom 404 page

--- a/public/assets/app.config.json
+++ b/public/assets/app.config.json
@@ -2,7 +2,7 @@
     "apiEndpoint": "/api",
     "contactAddress": "info@internetstiftelsen.se",
     "defaultLanguage": "sv",
-    "enabledLanguages": [ "sv", "en" ],
+    "enabledLanguages": [ "sv", "en", "fi", "fr", "es", "nb", "da" ],
     "logoUrl": "assets/images/internetstiftelsen-logo.svg",
     "msgBanner": "",
     "pollingInterval": 5000,
