add config to .env.sample

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-PUBLIC_API_URL="/api"
+PUBLIC_API_URL="http://127.0.0.1:8080/api"
 PUBLIC_POLLING_INTERVAL=5000
+APPLICATION=zonemaster.se
+REPOSITORY=
+SLACK_WEBHOOK=
+DEPLOY_STAGE_USER=
+DEPLOY_STAGE_IP=
+DEPLOY_PROD_USER=
+DEPLOY_PROD_IP=
+
