fix merge conflicts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*"],
-            "@theme/*": ["./src/themes/default/*"]
+            "@theme/*": ["./src/themes/internetstiftelsen/*"]
         },
         "resolveJsonModule": true,
         "esModuleInterop": true
